task-3-mesh/tmp-unauth-mesh.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tmp-unauth-mesh
  namespace: payments
  labels:
    app: tmp-unauth-mesh
spec:
  serviceAccountName: default
  securityContext:
    runAsNonRoot: true
    runAsUser: 1001
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: curl
    image: curlimages/curl:8.8.0
    command: ["sleep", "3600"]
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop: ["ALL"]
      readOnlyRootFilesystem: true
      runAsNonRoot: true
      runAsUser: 1001
