task-3-mesh/virtual-service-internal.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ledger-api-internal-vs
  namespace: payments
spec:
  hosts:
  - ledger-api.payments.svc.cluster.local
  http:
  - route:
    - destination:
        host: ledger-api.payments.svc.cluster.local
        subset: v1
      weight: 90
    - destination:
        host: ledger-api.payments.svc.cluster.local
        subset: v2
      weight: 10
