task-3-mesh/auth-allow-reporting.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-reporting-to-ledger
  namespace: payments
spec:
  selector:
    matchLabels:
      app: ledger-api
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/payments/sa/reporting"
        - "cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"
