task-3-mesh/net-allow-unauth.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-unauth-mesh
  namespace: payments
spec:
  podSelector:
    matchLabels:
      app: tmp-unauth-mesh
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - ports:
    - protocol: TCP
      port: 15021
  egress:
  - to:
    - namespaceSelector: {}
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
    ports:
    - protocol: TCP
      port: 15012
  - to:
    - podSelector:
        matchLabels:
          app: ledger-api
    ports:
    - protocol: TCP
      port: 8080
    - protocol: TCP
      port: 15006
